Fix 'Clickable elements too close together' usability issue
Google Search Console flags this mobile usability issue.

Trying out whether just adding some margin to bottom of list items would help.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -264,6 +264,10 @@ $font-stack: inconsolata, monospace;
             font-size: 18px;
         }
     }
+
+    li {
+        margin-bottom: 0.2em;
+    }
 }
 
 .footnotes {
